# metadata-api

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  config.py  config_default.py  config_default.sh  gen_pids.sh  get_metadata.sh  parse_metashare.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run.py  set_version.sh  translate_lang.py  update-sb-metadata.sh  update_metadata.sh
convert/: dump_json.py
docs/: caching.md  dev-docs.md  metadata_sbwebb_datacite.ods  pid_creation.md
gen_pids/: gen_pids.py
media/: README.md  sb-metadata-workflow.drawio
metadata/: __init__.py  blacklist.py  views.py
metadata/static/: apidoc.yaml
metadata_api/: __init__.py  adapt_schema.py  main.py  memcached.py  models.py  openapi_info.yaml  parse_yaml.py  router.py  settings.py  tasks.py  utils.py  views.py
metadata_api/static/: apidoc.yaml
parse/: blacklist.py  collection.py  create_metashare.py  gen_pids.py  licence.py  parse_json.py  parse_metashare.py  parse_yaml.py  resource_text_mapping.py  trainingdata.py  translate_lang.py
parse/data/: hdl2doi.tsv
parse/metashare-templates/: corpus-template.xml  lexicon-template.xml  model-template.xml
tmp_scripts/: dump_json.py  fix_json.py  metadata_util.py
update-meta-share/: README.md  create_metadata.py  setup.sh  update-corpus-stats.py  update-corpus-stats.sh
update-meta-share/configs/: blandat.txt  config.txt  config_aspac.txt  config_europarl.txt  config_fisk.txt  config_kubhist.txt  config_kubhist2.txt  config_rd.txt  config_ub-kvt.txt  config_vasa.txt
update-meta-share/templates/: template_anne.xml  template_aspac.xml  template_fisk.xml  template_kubhist.xml  template_martin.xml  template_rd.xml  template_ub-kvt.xml
